comp-arch/seminar/src/infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: romashka
spec:
  type: ClusterIP
  selector:
    app: romashka
  ports:
    - name: http
      port: 8000
      targetPort: http
