comp-arch/seminar/src/infra/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romashka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: romash.ka
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: romashka
            port:
              name: http
